--- a/src/app/shared/footer/footer.html
+++ b/src/app/shared/footer/footer.html
@@ -1,26 +1,30 @@
-<footer class="docs-footer"
-        [class.is-next-version]="isNextVersion">
+<footer class="docs-footer">
   <div class="docs-footer-list">
     <div class="docs-footer-logo">
       <div class="footer-logo">
-        <img class="docs-footer-angular-logo"
-          src="../../../assets/img/homepage/angular-white-transparent.svg"
-          alt="Angular icon">
-        <span><a href="https://angular.io">Learn Angular</a></span>
+        <a href="https://www.nextgen.com/">
+          <img
+            class="docs-footer-angular-logo"
+            src="../../../assets/img/homepage/nextgen-white-transparent.png"
+            alt="Angular icon"
+          />
+        </a>
+        <!-- <span><a href="https://angular.io">Learn Angular</a></span> -->
       </div>
     </div>
 
     <div class="docs-footer-version">
-      <img class="angular-material-logo" src="../../../assets/img/angular-material-logo.svg"
-           alt="Angular Material icon">
+      <img
+        class="angular-material-logo"
+        src="../../../assets/img/angular-material-logo.svg"
+        alt="Angular Material icon"
+      />
       <span class="version">Current Version: {{version}}</span>
     </div>
 
     <div class="docs-footer-copyright">
       <div>
-        <span>Powered by Google LLC ©2010-{{year}}.</span>
-        <a href="https://github.com/angular/components/blob/main/LICENSE">Code licensed under an MIT-style License.</a>
-        <span>Documentation licensed under CC BY 4.0.</span>
+        <span>© {{year}} NXGN Management, LLC. All Rights Reserved.</span>
       </div>
     </div>
   </div>
