--- a/src/app/pages/component-sidenav/_component-sidenav-theme.scss
+++ b/src/app/pages/component-sidenav/_component-sidenav-theme.scss
@@ -1,7 +1,7 @@
-@use '@angular/material' as mat;
-@use 'sass:color';
-@use 'sass:map';
-@use '../../../styles/constants';
+@use "@angular/material" as mat;
+@use "sass:color";
+@use "sass:map";
+@use "../../../styles/constants";
 
 @mixin theme($theme) {
   $primary: map.get($theme, primary);
@@ -11,47 +11,88 @@
   $nav-background-opacity: if($is-dark-theme, 0.2, 0.03);
   $nav-background-focus-opacity: if($is-dark-theme, 0.25, 0.08);
 
-  .docs-component-viewer-nav-content {
-    border-right: 1px solid mat.get-color-from-palette($foreground, divider);
+  .docs-component-viewer-nav__indvl {
+    .docs-component-viewer-nav-content {
+      border-right: 1px solid mat.get-color-from-palette($foreground, divider);
 
-    &::-webkit-scrollbar-thumb {
-      background: rgba(0, 0, 0, .26);
-    }
-
-    a {
-      color: map.get($foreground, secondary-text);
-
-      &:hover {
-        color: mat.get-color-from-palette($foreground, text);
+      &::-webkit-scrollbar-thumb {
+        background: rgba(0, 0, 0, 0.26);
       }
 
-      &.docs-component-viewer-sidenav-item-selected {
-        background: rgba(mat.get-color-from-palette($primary, default), 0.15);
+      a {
+        color: map.get($foreground, secondary-text);
 
-        .mdc-list-item__primary-text {
-          color: color.adjust(
-            mat.get-color-from-palette($primary, default),
-            $lightness: if($is-dark-theme, 25%, 0%)
-          );
+        &:hover {
+          color: mat.get-color-from-palette($foreground, text);
+        }
+
+        &.docs-component-viewer-sidenav-item-selected {
+          background: rgba(mat.get-color-from-palette($primary, default), 0.15);
+
+          .mdc-list-item__primary-text {
+            color: color.adjust(
+              mat.get-color-from-palette($primary, default),
+              $lightness: if($is-dark-theme, 25%, 0%)
+            );
+          }
+        }
+
+        &.docs-component-viewer-sidenav-item-selected:hover {
+          background: rgba(mat.get-color-from-palette($primary, default), 0.3);
+        }
+      }
+    }
+  }
+
+  .docs-component-viewer-nav__grouped {
+    .docs-component-viewer-nav-content {
+      background: rgba(0, 0, 0, $nav-background-opacity);
+      color: white;
+
+      &::-webkit-scrollbar-thumb {
+        background: rgba(0, 0, 0, 0.26);
+      }
+
+      .docs-nav-content-btn {
+        color: mat.get-color-from-palette($foreground, text);
+        font-family: Roboto, "Helvetica Neue", sans-serif;
+
+        &:focus {
+          // override the default background
+          background: rgba(0, 0, 0, $nav-background-focus-opacity);
         }
       }
 
-      &.docs-component-viewer-sidenav-item-selected:hover {
-        background: rgba(mat.get-color-from-palette($primary, default), 0.3);
+      a {
+        //color: mat-color($foreground, secondary-text);
+
+        &.docs-component-viewer-sidenav-item-selected,
+        &:hover {
+          color: mat.get-color-from-palette(
+            $primary,
+            if($is-dark-theme, 200, default)
+          );
+        }
+
+        &.docs-component-viewer-sidenav-item-selected {
+          background: rgba(0, 0, 0, $nav-background-focus-opacity);
+        }
       }
     }
   }
 
   @media (max-width: constants.$small-breakpoint-width) {
     .docs-component-viewer-sidenav {
-      .docs-component-viewer-nav-content {
-        background: none;
+      .docs-component-viewer-nav__indvl {
+        .docs-component-viewer-nav-content {
+          background: none;
+        }
       }
     }
 
     .mat-drawer {
       &::-webkit-scrollbar-thumb {
-        background: rgba(0, 0, 0, .26);
+        background: rgba(0, 0, 0, 0.26);
       }
     }
   }
