--- a/src/app/pages/component-sidenav/component-sidenav.scss
+++ b/src/app/pages/component-sidenav/component-sidenav.scss
@@ -1,4 +1,4 @@
-@use '../../../styles/constants';
+@use "../../../styles/constants";
 
 app-component-sidenav {
   display: flex;
@@ -27,7 +27,7 @@ app-component-sidenav {
   }
 }
 
-.docs-component-viewer-nav {
+.docs-component-viewer-nav__indvl {
   position: sticky;
   top: 0;
 
@@ -57,6 +57,78 @@ app-component-sidenav {
   }
 }
 
+.docs-component-viewer-nav__grouped {
+  position: sticky;
+  top: 25px;
+
+  .docs-component-viewer-nav-content {
+    margin: 25px;
+    width: constants.$sidenav-width;
+    max-height: 75vh;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+      height: 4px;
+      width: 4px;
+    }
+
+    button {
+      padding: 10px 15px;
+      font-weight: 700;
+      line-height: 16px;
+      margin: 0;
+      font-size: 13px;
+      cursor: pointer;
+      position: relative;
+      display: block;
+      width: 100%;
+      text-align: left;
+      background: none;
+      border: none;
+
+      &:focus {
+        outline: none;
+      }
+
+      .mat-icon {
+        position: absolute;
+        right: 5px;
+        font-size: 18px;
+      }
+    }
+    .docs-nav-list {
+      .docs-nav-list-item {
+        height: 40px;
+        line-height: 40px;
+      }
+    }
+
+    hr {
+      padding: 0;
+      margin: 0;
+    }
+
+    ul {
+      list-style-type: none;
+      margin: 0 0 5px 0;
+      padding: 0;
+      overflow: hidden;
+    }
+
+    li {
+      font-size: 13px;
+      line-height: 16px;
+      margin: 0;
+      padding: 5px 15px 5px 20px;
+    }
+
+    a {
+      display: block;
+      text-decoration: none;
+    }
+  }
+}
+
 .docs-component-sidenav-content {
   display: flex;
   flex-direction: column;
@@ -79,7 +151,10 @@ div .mat-mdc-list-base {
 }
 
 /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
-div.docs-component-viewer-nav-content .mat-nav-list .mat-mdc-list-item .mat-list-item-content {
+div.docs-component-viewer-nav-content
+  .mat-nav-list
+  .mat-mdc-list-item
+  .mat-list-item-content {
   padding-left: 25px;
 }
 
