--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -4,15 +4,18 @@ body {
 }
 
 body {
-  font-family: "Roboto","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+  font-family: "Roboto", "Helvetica Neue Light", "Helvetica Neue", Helvetica,
+    Arial, "Lucida Grande", sans-serif;
   margin: 0;
 }
 
-.docs-button[md-button], .docs-button[md-raised-button] {
+.docs-button[md-button],
+.docs-button[md-raised-button] {
   text-transform: uppercase;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-weight: 400;
 }
 
@@ -43,8 +46,9 @@ h1, h2 {
   vertical-align: middle;
 }
 
-code, pre {
-  font-family: 'Roboto Mono', monospace;
+code,
+pre {
+  font-family: "Roboto Mono", monospace;
 }
 
 code {
@@ -53,4 +57,8 @@ code {
 
 pre {
   font-size: 14px;
+}
+
+.mdc-list-item__primary-text {
+  font: 400 13px / 24px Roboto, sans-serif !important;
 }
